Correct promoted content meta element font size.
The "by" part of "promoted content by [compant]" copy was too large.

--- a/src/scss/elements/_promoted.scss
+++ b/src/scss/elements/_promoted.scss
@@ -2,20 +2,19 @@
 	color: oColorsByName('black');
 
 	.o-teaser__meta {
-		@include oTypographySans($weight: 'semibold');
+		@include oTypographySans($scale: -1, $weight: 'semibold');
 		color: $_o-teaser-muted;
 		margin-bottom: oSpacingByName('s2');
 	}
 
 	.o-teaser__promoted-prefix {
-		@include oTypographySans($scale: 0);
+		@include oTypographySans($scale: 0, $include-font-family: false);
 		text-transform: uppercase;
 		color: oColorsByName('oxford-50');
 		display: block;
 	}
 
 	.o-teaser__promoted-by {
-		@include oTypographySans($scale: -1, $include-font-family: false);
 		text-transform: uppercase;
 	}
 }
